FISH-10055 Remove additional occurence